--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 		<canvas id="canvas"></canvas>
 		
 	    <!-- CDN Link to Three.js -->
-		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js"></script> -->
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js"></script>
+		<script src="https://unpkg.com/three@0.87.0/examples/js/loaders/OBJLoader.js"> </script> -->
+
 		<script src="lib/three-r87.js"></script>
+		<script src="lib/OBJLoader.js"> </script>
 
 	    <!-- Link all other js files below -->
+	    <script src="js/components/Background.js"></script>
+	    <script src="js/components/Spaceship.js"></script>
 	    <script src="js/SceneManager.js"></script>
 	    <script src="js/main.js"></script>
 	    
