--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	</head>
 
 	<body>
+		<div id="scoreboard">HEALTH: 3 &emsp; SCORE: 0</div>
+		<div id="gameover"></div>
+		
 		<canvas id="canvas"></canvas>
 		
 	    <!-- CDN Link to Three.js -->
