--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 		<script src="lib/GLTFLoader.js"> </script>
 
 	    <!-- Link all other js files below -->
+	    <script src="js/destroyMissiles.js"></script>
+	    <script src="js/checkCollision.js"></script>
 	    <script src="js/components/Coin.js"></script>
-	    <script src="js/components/placeCoins.js"></script>
+	    <script src="js/placeCoins.js"></script>
 	    <script src="js/components/Enemy.js"></script>
-	    <script src="js/components/placeEnemies.js"></script>
+	    <script src="js/placeEnemies.js"></script>
 	    <script src="js/components/Missile.js"></script>
 	    <script src="js/components/Background.js"></script>
 	    <script src="js/components/Spaceship.js"></script>
