--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<body>
 		<div id="scoreboard">HEALTH: 3 &emsp; SCORE: 0</div>
 		<div id="gameover"></div>
-		
 		<canvas id="canvas"></canvas>
 		
 	    <!-- CDN Link to Three.js -->
@@ -21,17 +20,17 @@
 		<script src="lib/three-r87.js"></script>
 		<script src="lib/OBJLoader.js"> </script>
 		<script src="lib/GLTFLoader.js"> </script>
-
+		
 	    <!-- Link all other js files below -->
-	    <script src="js/destroyMissiles.js"></script>
-	    <script src="js/checkCollision.js"></script>
 	    <script src="js/components/Coin.js"></script>
 	    <script src="js/placeCoins.js"></script>
+	    <script src="js/components/Missile.js"></script>
 	    <script src="js/components/Enemy.js"></script>
 	    <script src="js/placeEnemies.js"></script>
-	    <script src="js/components/Missile.js"></script>
-	    <script src="js/components/Background.js"></script>
-	    <script src="js/components/Spaceship.js"></script>
+	    <script src="js/components/Skybox.js"></script>
+	    <script src="js/components/Plane.js"></script>
+	    <script src="js/checkCollision.js"></script>
+	    <script src="js/deleteMissiles.js"></script>
 	    <script src="js/SceneManager.js"></script>
 	    <script src="js/main.js"></script>
 	    
